Make test and documentation
